Combat and Freeze Update